Fix spacing and margin collapse

--- a/src/components/HomepageMainContent/HomepageMainContent.module.css
+++ b/src/components/HomepageMainContent/HomepageMainContent.module.css
@@ -14,22 +14,28 @@
 }
 
 .heroColumn {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    display: block;
+}
+
+@media (min-width: 1024px) {
+    .heroColumn {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
 }
 
 .heroGenerativeArtColumn {
 }
 
 .heroTextColumn {
-    padding-top: 16px;
+    padding-top: 1rem;
 }
 
 @media (min-width: 1024px) {
     .heroTextColumn {
-        padding: 16px;
+        padding: 1rem 16px;
         padding-bottom: calc(24px + 1rem);
     }
 }
@@ -37,7 +43,7 @@
 .heroTextTitle {
     font-size: clamp(2.5rem, 4vw + 1rem, 3rem);
     min-height: 0vw; /* trick to make safari recalculate font-size on resize */
-    margin: 24px 0;
+    margin: 1.5rem 0;
 }
 
 .heroTextSubTitle {
