--- a/src/components/IntroWords/IntroWords.module.css
+++ b/src/components/IntroWords/IntroWords.module.css
@@ -1,6 +1,6 @@
 .paragraph {
     font-size: 1.5rem;
-    margin: 16px auto;
+    margin: 1rem auto;
 }
 
 @media (min-width: 1024px) {
